Hotfix #741 - fix shared filed display when filename is too long (more than 150 char).

--- a/src/main/webapp/css/theme0-ie6.css
+++ b/src/main/webapp/css/theme0-ie6.css
@@ -71,7 +71,9 @@ table.t-data-grid thead tr th {		/* Impossible to style 'tr' tags (5.5, 6, 7) */
 	bottom: .25em;
 }
 
-
+#list td.fileProperties div {
+	ms-text-overflow:ellipsis;
+}
 
 /***************************************************************************
 * PAGES
