--- a/src/main/webapp/css/theme0-ie8.css
+++ b/src/main/webapp/css/theme0-ie8.css
@@ -20,6 +20,8 @@
 	width: 430px !important;
 }
 
-
+#list td.fileProperties div {
+	ms-text-overflow:ellipsis;
+}
 
 /***************************************************************************/
